--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,5 +6,7 @@
     </head>
     <body>
         <h1>Lasagna</h1>
+        <img src="../imgs/Best-Lasagna-550-500x375.jpg" alt="Finished Lasagna">
+        <h2>Description</h2>
     </body>
 </html>
