--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -22,7 +22,7 @@
             <li><strong>Cheeses:</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
             <li><strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
         </ul>
-        <h2>Cooking Steps</h2>
+        <h2>Directions</h2>
         <p>The assembled lasagna should take about 50 minutes to cook in an oven preheated to 375 degrees F. Cover it with foil for the first 25 minutes, then let it cook uncovered for the final 25 minutes. Also, it's important to let the lasagna rest at room temperature for about 15 minutes before you cut into it.</p>
         <ol>
             <li>Make the meat sauce.</li>
