--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/chicken_bhuna.html">Chicken Bhuna</a></li>
-            <li><a href="./recipes/pork_dumplings.html">Pork Dumplinga</a></li>
+            <li><a href="./recipes/pork_dumplings.html">Pork Dumplings</a></li>
             <li><a href="./recipes/traditional_sauerbraten_beauty.html">Traditional Sauerbraten Beauty</a></li>
         </ul>
     </body>
