--- a/recipes/chicken_bhuna.html
+++ b/recipes/chicken_bhuna.html
@@ -5,7 +5,7 @@
         <title>Chicken Bhuna</title>
     </head>
     <body>
-        <h1>Chicken Bhuna/h1>
+        <h1>Chicken Bhuna</h1>
         <img src="../imgs/chicken-bhuna-recipe.jpg" alt="Finished Chicen Bhuna">
         <h2>Description</h2>
         <p>Chicken bhuna is an Indian curry with delicious fried onions and aromatic herb and spices that tastes fantastic! Enjoy with freshly cooked basmati rice and naan bread.</p>
